--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,13 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+		<groupId>com.lowagie</groupId>
+		<artifactId>itext</artifactId>
+		<version>2.1.7</version>
+		
+		</dependency>
   </dependencies>
 
+  
 </project>
