--- a/pom.xml
+++ b/pom.xml
@@ -134,10 +134,9 @@
 			<version>1.6.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.jolbox</groupId>
-			<artifactId>bonecp</artifactId>
-			<version>0.6.5</version>
-			<scope>compile</scope>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -149,14 +148,11 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
-
 		</dependency>
+		
 	</dependencies>
-
-
 </project>
