--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -4,9 +4,9 @@ jdbcRealm.permissionsLookupEnabled = true
 jdbcRealm.authenticationQuery = SELECT user_pass FROM users WHERE user_name = ?
 jdbcRealm.userRolesQuery = SELECT role_name FROM user_roles WHERE user_name = ?
 jdbcRealm.permissionsQuery = SELECT roleper FROM roles_permission WHERE role_name = ?
-ds = com.jolbox.bonecp.BoneCPDataSource
-ds.driverClass=com.mysql.jdbc.Driver
-ds.jdbcUrl=jdbc:mysql://localhost:3306/iaau
+ds = org.apache.commons.dbcp.BasicDataSource
+ds.driverClassName=com.mysql.jdbc.Driver
+ds.url=jdbc:mysql://localhost:3306/iaau
 ds.username = user
 ds.password = 1qaz
 jdbcRealm.dataSource=$ds
