--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -4,6 +4,8 @@ jdbcRealm.permissionsLookupEnabled = true
 jdbcRealm.authenticationQuery = SELECT user_pass FROM users WHERE user_name = ?
 jdbcRealm.userRolesQuery = SELECT role_name FROM user_roles WHERE user_name = ?
 jdbcRealm.permissionsQuery = SELECT roleper FROM roles_permission WHERE role_name = ?
+sha256Matcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+jdbcRealm.credentialsMatcher = $sha256Matcher
 ds = org.apache.commons.dbcp.BasicDataSource
 ds.driverClassName=com.mysql.jdbc.Driver
 ds.url=jdbc:mysql://localhost:3306/iaau
